# cisc361-project

./: CMakeLists.txt  README.md
inputs/: i0.txt  i1.txt  i2.txt
src/: Bankers.cpp  Bankers.h  Commands.cpp  Commands.h  HoldQueue.cpp  HoldQueue.h  HoldQueueFIFO.cpp  HoldQueueFIFO.h  HoldQueueSJF.cpp  HoldQueueSJF.h  Input.h  Job.cpp  Job.h  JobQueue.cpp  JobQueue.h  Main.cpp  ProcessQueue.cpp  ProcessQueue.h  String.cpp  String.h  System.cpp  System.h  main.cpp
src/utility/: String.cpp  String.h
